--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-----MUSIC-->
     <button id="play-music">Enter Site</button>
     <audio id="bg-music" loop>
-      <source src="music.mp3" type="audio/mpeg">
+      <source src="https://github.com/TroyBoi10/troyboi10.github.io/blob/main/background-music.mp3" type="audio/mpeg">
     </audio>
 
     <!-- ANIMAL WITH HEART -->
@@ -366,6 +366,7 @@
   </script>
 </body>
 </html>
+
 
 
 
