--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <main class="card">
 
-    <!-----MUSIC--!>
+    <!--MUSIC-->
     <button id="play-music">Enter Site</button>
     <audio id="bg-music" loop>
       <source src="https://github.com/TroyBoi10/troyboi10.github.io/blob/main/background-music.mp3" type="audio/mpeg">
@@ -380,6 +380,7 @@
   </script>
 </body>
 </html>
+
 
 
 
