--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     }
 
     #yesBtn {
-      centre: 18%;
+      align: centre;
       background: var(--yes);
       color: #fff;
     }
@@ -359,6 +359,7 @@
   </script>
 </body>
 </html>
+
 
 
 
