--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     body {
       margin: 0;
       min-height: 100svh;
-      display: grid;
-      place-items: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       background: radial-gradient(circle at top, var(--bg2), var(--bg1));
       font-family: system-ui, sans-serif;
-      overflow: auto;
       padding: 16px;
     }
 
@@ -359,6 +359,7 @@
   </script>
 </body>
 </html>
+
 
 
 
