--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 </script>
   
 <body>
+  <!-- Entry Button -->
+  <button id="enter-site">Load Site</button>
+  
+  <!-- Background Music -->
+  <audio id="bg-music" loop>
+    <source src="music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+  
   <canvas id="confettiCanvas"></canvas>
 
   <main class="card">
@@ -364,6 +373,7 @@
   </script>
 </body>
 </html>
+
 
 
 
