--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   
   <!-- Background Music -->
   <audio id="bg-music" loop>
-    <source src="music.mp3" type="audio/mpeg">
+    <source src="background-music.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   
@@ -373,6 +373,7 @@
   </script>
 </body>
 </html>
+
 
 
 
