--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="hint" id="hint">Don't be shy 😈</div>
 
     <section class="result" id="result">
-      <h2>YAY! 🎉</h2>
+      <h2>WOO HOO! HAPPY VALENTINE'S DAY ❤️</h2>
       <img
         class="fireworks"
         src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
@@ -373,6 +373,7 @@
   </script>
 </body>
 </html>
+
 
 
 
