--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
   <main class="card">
   <section id="maincontentbox">
     <!-- ANIMAL WITH HEART -->
+    <img id="enter-site" src="tulip.png">
+    
     <svg class="art" viewBox="0 0 320 240" xmlns="http://www.w3.org/2000/svg">
       <defs>
         <linearGradient id="fur" x1="0" x2="1">
@@ -376,3 +378,4 @@
   </script>
 </body>
 </html>
+
