--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <main class="card">
   <section id="maincontentbox">
     <!-- ANIMAL WITH HEART -->
-    <img id="enter-site" src="tulip.png">
+    <img src="tulip.png">
     
     <svg class="art" viewBox="0 0 320 240" xmlns="http://www.w3.org/2000/svg">
       <defs>
@@ -378,4 +378,5 @@
   </script>
 </body>
 </html>
+
 
