--- a/index.html
+++ b/index.html
@@ -128,20 +128,6 @@
     }
   </style>
 </head>
-
-<script>
-  const enterButton = document.getElementById("enter-site");
-  const bgMusic = document.getElementById("bg-music");
-
-  enterButton.addEventListener("click", () => {
-    bgMusic.play().catch(err => {
-      console.log("Autoplay blocked:", err);
-    });
-
-    // Optional: hide button after click
-    enterButton.style.display = "none";
-  });
-</script>
   
 <body>
   <!-- Entry Button -->
@@ -339,8 +325,24 @@
       fullScreenConfetti();
     });
   </script>
+
+  /*--MUSIC CLICKED--*/
+  <script>
+  const enterButton = document.getElementById("enter-site");
+  const bgMusic = document.getElementById("bg-music");
+
+  enterButton.addEventListener("click", () => {
+    bgMusic.play().catch(err => {
+      console.log("Autoplay blocked:", err);
+    });
+
+    // Optional: hide button after click
+    enterButton.style.display = "none";
+  });
+</script>
 </body>
 </html>
+
 
 
 
