--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     });
   </script>
 
-  /*--MUSIC CLICKED--*/
+  /* -------- MUSIC CLICKED ------- */
   <script>
   const enterButton = document.getElementById("enter-site");
   const bgMusic = document.getElementById("bg-music");
@@ -342,6 +342,7 @@
 </script>
 </body>
 </html>
+
 
 
 
