--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     }
 
     .card {
+      top-padding: 200 px;
       width: min(1080px, 92vw);
       padding: 26px 22px;
       background: var(--card);
@@ -128,8 +129,7 @@
     }
 
     /* LOADING CIRCLE */
-    /* 🔄 LOADING SCREEN */
-#loader {
+  #loader {
   position: fixed;
   inset: 0;
   background: radial-gradient(circle at top, #ffeef6, #ffd6e7);
@@ -382,6 +382,7 @@
 </script>  
 </body>
 </html>
+
 
 
 
