--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     }
 
     .card {
-      top-padding: 200 px;
       width: min(1080px, 92vw);
       padding: 26px 22px;
       background: var(--card);
@@ -88,7 +87,7 @@
     }
 
     #yesBtn {
-      place-items: centre;
+      place-items: center;
       background: var(--yes);
       color: #fff;
     }
@@ -165,9 +164,6 @@
     <div class="spinner"></div>
   </div>
   
-  <!-- Entry Button -->
-  <button id="enter-site">Load Site</button>
-  
   <!-- Background Music -->
   <audio id="bg-music" loop>
     <source src="Stephen Sanchez - Until I Found You (Official Video).mp3" type="audio/mpeg">
@@ -176,10 +172,12 @@
   
   <canvas id="confettiCanvas"></canvas>
 
-  <main class="card">
+<main class="card">
+  <!-- Entry Button -->
+  <button id="enter-site">Load Site</button>
   <section id="maincontentbox">
     <!-- ANIMAL WITH HEART -->
-    <img src="tulip.png" id="enter-site" >
+    <img src="tulip.png">
 
     <h1>niks will you be my valentine?</h1>
   </section>
@@ -382,6 +380,7 @@
 </script>  
 </body>
 </html>
+
 
 
 
