--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       border-radius: 22px;
       text-align: center;
       box-shadow: 0 18px 60px rgba(0,0,0,.15);
+      position: relative;
     }
 
     .art {
@@ -97,6 +98,12 @@
       left: 62%;
       background: #e5e7eb;
       color: #111827;
+    }
+
+    #enter-site {
+      position: relative;
+      transform: none;
+      margin-bottom: 16px;
     }
 
     .hint {
@@ -380,6 +387,7 @@
 </script>  
 </body>
 </html>
+
 
 
 
