--- a/index.html
+++ b/index.html
@@ -163,6 +163,76 @@
   to { transform: rotate(360deg); }
 }
 /* 🔄 END LOADING SCREEN */
+
+/* --- ENVELOPE Layout helpers --- */
+.envelope-wrapper {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+/* --- Envelope --- */
+.envelope {
+  position: relative;
+  width: 320px;
+  height: 200px;
+  cursor: default;
+}
+
+/* Body */
+.envelope .body {
+  position: absolute;
+  inset: 0;
+  background: #f3f1e7;
+  border-radius: 6px;
+  box-shadow: 0 14px 40px rgba(0,0,0,0.15);
+  z-index: 1;
+}
+
+/* Top flap */
+.envelope .flap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #e7e3d6;
+  clip-path: polygon(0 0, 50% 55%, 100% 0);
+  transform-origin: top center;
+  transform: rotateX(0deg);
+  transition: transform 0.8s cubic-bezier(.25,.8,.25,1);
+  z-index: 3;
+}
+
+/* Heart button */
+.heart {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -10%);
+  font-size: 32px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 4;
+  transition: transform 0.2s ease;
+}
+
+.heart:hover {
+  transform: translate(-50%, -14%) scale(1.1);
+}
+
+/* Open state */
+.envelope.open .flap {
+  transform: rotateX(-160deg);
+}
+
+/* Target section */
+#love-letter {
+  min-height: 100vh;
+  padding: 120px 20px;
+  text-align: center;
+}    
   </style>
 </head>
   
@@ -178,6 +248,25 @@
   </audio>
   
   <canvas id="confettiCanvas"></canvas>
+
+<!-- ENVELOPE -->
+<div class="envelope-wrapper">
+  <div class="envelope" id="envelope">
+    <div class="flap"></div>
+
+    <div class="body"></div>
+
+    <button class="heart" id="openEnvelope" aria-label="Open letter">
+      ❤️
+    </button>
+  </div>
+</div>
+
+<!-- TARGET SECTION -->
+<div id="love-letter">
+  <h1>You made it 💖</h1>
+  <p>This is the section we scroll to.</p>
+</div>
 
 <main class="card">
   <!-- Entry Button -->
@@ -380,6 +469,28 @@
     enterButton.style.display = "none";
   });
 </script>
+
+/* ---------- ENVELOPE CLICK ---------- */
+<script>
+  const openBtn = document.getElementById("openEnvelope");
+  const envelope = document.getElementById("envelope");
+
+  openBtn.addEventListener("click", () => {
+    envelope.classList.add("open");
+
+    // delay scroll until flap starts opening
+    setTimeout(() => {
+      document
+        .getElementById("love-letter")
+        .scrollIntoView({ behavior: "smooth" });
+    }, 500);
+
+    // optional: disable button after click
+    openBtn.disabled = true;
+  });
+</script>
+
+ /* ---------- LOADING CIRCLE ---------- */ 
 <script>
   window.addEventListener("load", () => {
     const loader = document.getElementById("loader");
@@ -392,6 +503,7 @@
 </script>  
 </body>
 </html>
+
 
 
 
