--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
     // delay scroll until flap starts opening
     setTimeout(() => {
       document
-        .getElementById("love-letter")
+        .getElementById("maincontentbox")
         .scrollIntoView({ behavior: "smooth" });
     }, 500);
 
@@ -458,6 +458,7 @@
 </script>
 </body>
 </html>
+
 
 
 
