--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
 <!-- ENVELOPE -->
 <div class="envelope-wrapper">
   <div class="envelope" id="envelope">
-    <div class="flap"></div>
+    <div class="flap">
+      <p>My Love...</p>
+    </div>
 
     <div class="body"></div>
 
@@ -448,7 +450,7 @@
     // delay scroll until flap starts opening
     setTimeout(() => {
       document
-        .getElementById("love-letter")
+        .getElementById("maincontentbox")
         .scrollIntoView({ behavior: "smooth" });
     }, 500);
 
@@ -458,6 +460,7 @@
 </script>
 </body>
 </html>
+
 
 
 
