--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
   width: 100%;
   height: 100%;
   background: #e7e3d6;
+  text-align: center;
   clip-path: polygon(0 0, 50% 55%, 100% 0);
   transform-origin: top center;
   transform: rotateX(0deg);
@@ -425,7 +426,7 @@
 
   <!-- -------- MUSIC CLICKED ------- -->
   <script>
-  const enterButton = document.getElementById("enter-site");
+  const enterButton = document.getElementById("openEnvelope");
   const bgMusic = document.getElementById("bg-music");
 
   enterButton.addEventListener("click", () => {
@@ -460,6 +461,7 @@
 </script>
 </body>
 </html>
+
 
 
 
