--- a/index.html
+++ b/index.html
@@ -100,12 +100,6 @@
       color: #111827;
     }
 
-    #enter-site {
-      position: relative;
-      transform: none;
-      margin-bottom: 16px;
-    }
-
     .hint {
       margin-top: 10px;
       font-size: 13px;
@@ -239,13 +233,11 @@
 </div>
 
 <main class="card">
-  <!-- Entry Button -->
-  <button id="enter-site">Load Site</button>
   <section id="maincontentbox">
     <!-- ANIMAL WITH HEART -->
     <img src="tulip.png">
 
-    <h1>niks will you be my valentine?</h1>
+    <h1>will you be my valentine?</h1>
   </section>
 
     <section class="button-zone" id="zone">
@@ -462,6 +454,7 @@
 </script>
 </body>
 </html>
+
 
 
 
