--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Will you be my Valentine?</title>
+  <title>Attention needed!</title>
 
   <!-- Confetti library -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
@@ -228,8 +228,8 @@
 
 <!-- TARGET SECTION -->
 <div id="love-letter">
-  <h1>You made it 💖</h1>
-  <p>This is the section we scroll to.</p>
+  <h1>You made it. Almost... 💖</h1>
+  <p>Keep scrolling.</p>
 </div>
 
 <main class="card">
@@ -444,7 +444,7 @@
     // delay scroll until flap starts opening
     setTimeout(() => {
       document
-        .getElementById("maincontentbox")
+        .getElementById("love-letter")
         .scrollIntoView({ behavior: "smooth" });
     }, 500);
 
@@ -454,6 +454,7 @@
 </script>
 </body>
 </html>
+
 
 
 
