--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   transform: rotateX(-160deg);
 }
 
-/* Target section */
+/* Buffer section */
 #love-letter {
   min-height: 100vh;
   padding: 120px 20px;
@@ -226,7 +226,7 @@
   </div>
 </div>
 
-<!-- TARGET SECTION -->
+<!-- BUFFER SECTION -->
 <div id="love-letter">
   <h1>You made it. Almost... 💖</h1>
   <p>Keep scrolling.</p>
@@ -454,6 +454,7 @@
 </script>
 </body>
 </html>
+
 
 
 
