--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 /* Top flap */
 .envelope .flap {
   position: absolute;
+  padding-top: 20 px;
   top: 0;
   left: 0;
   width: 100%;
@@ -453,6 +454,7 @@
 </script>
 </body>
 </html>
+
 
 
 
