--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     </section>
 
     <!-- HINT -->
-    <div class="hint" id="hint">Don't be shy 😈</div>
+    <div class="hint" id="hint">Surely, don't be shy 😏</div>
 
     <section class="result" id="result">
       <h2>WOO HOO! HAPPY VALENTINE'S DAY ❤️</h2>
@@ -454,6 +454,7 @@
 </script>
 </body>
 </html>
+
 
 
 
