--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <h2>WOO HOO! HAPPY VALENTINE'S DAY ❤️</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
+        src="IMG_0261.JPEG"
         alt="Fireworks"
       />
     </section>
@@ -404,34 +404,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
