--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
     .fireworks {
       width: min(380px, 90vw);
+      max-width: 100%;
       margin: 0 auto;
       display: block;
     }
@@ -156,7 +157,7 @@
 /* Top flap */
 .envelope .flap {
   position: absolute;
-  padding-top: 30 px;
+  padding-top: 20PX;
   top: 0;
   left: 0;
   width: 100%;
@@ -404,4 +405,5 @@
 </script>
 </body>
 </html>
+
 
