--- a/index.html
+++ b/index.html
@@ -199,7 +199,13 @@
   min-height: 100vh;
   padding: 120px 20px;
   text-align: center;
-}    
+}
+
+#love-letter2 {
+  min-height: 100vh;
+  padding: 120px 20px;
+  text-align: center;
+}  
   </style>
 </head>
   
@@ -231,6 +237,12 @@
 <div id="love-letter">
   <h1>You made it. Almost... 💖</h1>
   <p>Keep scrolling.</p>
+</div>
+
+<!-- BUFFER SECTION -->
+<div id="love-letter2">
+  <br></br>
+  <p>A little more.</p>
 </div>
 
 <main class="card">
@@ -405,5 +417,6 @@
 </script>
 </body>
 </html>
+
 
 
