--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <!-- BUFFER SECTION -->
 <div id="love-letter2">
   <br></br>
-  <p>A little more.</p>
+  <h1>A little more.</h1>
 </div>
 
 <main class="card">
@@ -417,6 +417,7 @@
 </script>
 </body>
 </html>
+
 
 
 
